; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_mqueue.c_ipc_mqueue_remove_from_all.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_mqueue.c_ipc_mqueue_remove_from_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.waitq }
%struct.waitq = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipc_mqueue_remove_from_all(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.waitq*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  store %struct.waitq* %6, %struct.waitq** %3, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %8 = call i32 @imq_lock(%struct.TYPE_4__* %7)
  %9 = load %struct.waitq*, %struct.waitq** %3, align 8
  %10 = call i32 @waitq_valid(%struct.waitq* %9)
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.waitq*, %struct.waitq** %3, align 8
  %13 = call i32 @waitq_unlink_all_unlock(%struct.waitq* %12)
  store i32 %13, i32* %4, align 4
  ret void
}

declare dso_local i32 @imq_lock(%struct.TYPE_4__*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @waitq_valid(%struct.waitq*) #1

declare dso_local i32 @waitq_unlink_all_unlock(%struct.waitq*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
